fix color menu on mobile devices

--- a/src/components/CartButton/CartButton.module.css
+++ b/src/components/CartButton/CartButton.module.css
@@ -10,7 +10,8 @@
   cursor: pointer;
 }
 
-.СartButton:disabled {
+.CartButton:disabled,
+.CartButton[disabled] {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
