--- a/src/components/MinimizeNavMenu/MinimizeNavMenu.module.css
+++ b/src/components/MinimizeNavMenu/MinimizeNavMenu.module.css
@@ -60,4 +60,7 @@
   .iconMenu {
     display: block;
   }
+  .iconMenu span {
+    background-color: white;
+  }
 }
